--- a/README
+++ b/README
@@ -1,21 +1,23 @@
+minicom
+=======
 
-                                 **************
-                                 *   README   *
-                                 **************
+Minicom is a menu driven communications program. It emulates ANSI and VT102
+terminals. It has a dialing directory and auto zmodem download.
 
-Quick instructions for installation:
+Quick installation instructions
+-------------------------------
 
-1. Change to the minicom-$VERSION directory.
-2. ./configure (see ./configure --help for options)
-3. make
-4. make install
-5. minicom -s (for changing /etc/minicom you probably need to run it as root)
+1. Change to the `minicom-$VERSION` directory.
+2. `./configure` (see `./configure --help` for options)
+3. `make`
+4. `make install`
+5. `minicom -s` (for changing `/etc/minicom` you probably need to run it as root)
    Change what should be changed on your system, and choose
-   'Save setup as dfl' from the configuration menu to save the
+   `Save setup as dfl` from the configuration menu to save the
    changed settings as system defaults.
    Now add every user which should be allowed to use minicom to
-   the group of the corresponding character devices (e.g. /dev/ttyS0).
-   On Debian this group already exists and is called 'dialout'.
+   the group of the corresponding character devices (e.g. `/dev/ttyS0`).
+   On Debian this group already exists and is called `dialout`.
 
 Now you should have minicom compiled, installed and ready to use.
 
@@ -23,10 +25,10 @@ For more information, have a look at the other files.
 
 WWW: For information about the newest version, what has changed since the
 previous version, and sometimes possibly the newest beta version (if there
-is one available), look at http://alioth.debian.org/projects/minicom/.
+is one available), click [here](http://alioth.debian.org/projects/minicom/).
 
 HG: Current development version of minicom is in the Alioth HG repository,
-see http://alioth.debian.org/scm/?group_id=30018 for instructions.
+click [here](http://alioth.debian.org/scm/?group_id=30018) for instructions.
 
 If you want to use minicom with network-modem software, have a look at
 sunsite.unc.edu:/pub/Linux/apps/serialcomm/modem/modem-*.tar.gz by
